--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_URI=mongodb+srv://hritul:kittudidi@cluster0.y8rqwfu.mongodb.net/?retryWrites=true&w=majority
+DB_URI=mongodb+srv://hritul:kittudidi@cluster0.y8rqwfu.mongodb.net/Jewellery
